--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "@litert/mutex",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A mutex implement for JavaScript.",
   "main": "./lib/index.js",
   "scripts": {
-    "prepare": "npm run rebuild",
-    "build": "tsc -p tsconfig.json",
+    "prepublishOnly": "npm run rebuild",
+    "build": "tsc -v && tsc -p .",
     "rebuild": "npm run clean && npm run lint && npm run build",
-    "test": "echo See directory sources/samples",
-    "clean": "rm -rf lib",
-    "lint": "tslint -p . -c tslint.json"
+    "build-watch": "tsc -v && tsc -w -p .",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "test": "mocha",
+    "clean": "rm -rf lib examples",
+    "lint": "eslint --ext ts src"
   },
   "keywords": [
     "litert",
     "lrt",
     "mutex"
   ],
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "npm run lint && npm run typecheck"
+    }
+  },
   "author": "Angus.Fenying <fenying@litert.org> (https://fenying.net)",
   "license": "Apache-2.0",
   "repository": {
@@ -29,6 +37,13 @@
   "types": "./lib/index.d.ts",
   "typings": "./lib/index.d.ts",
   "devDependencies": {
-    "typescript": "^2.9.2"
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@types/node": "^14.11.8",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.11.0",
+    "husky": "^4.3.0",
+    "typescript": "^4.0.3"
   }
 }
